feat(benchmark): adjust BFT SMaRt KVStore benchmark implementation